--- a/index-START.html
+++ b/index-START.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<h1>Just a header</h1>
+<h1>Just a header or is it just a header?</h1>
   <div class="keys">
     <div data-key="65" class="key">
       <kbd>A</kbd>
